fix: webkit for safari & delete extra space

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @font-face {
   font-family: "Ubuntu";
   src: url("./assets/fonts/Ubuntu-Regular.ttf");
@@ -19,14 +20,12 @@ margin: 0;
 box-sizing: border-box;
 }
 
-html {  
+html {
 scroll-behavior: smooth;
 }
 
 body {
 height: 100vh;
-/*max-width: 1440px;
-min-width: 600px;*/
 font: 1.5em "Ubuntu", sans-serif;
 background: #d6d6d6;
 }
@@ -79,7 +78,7 @@ border-radius: 10px;
 transition: top 1s;
 }
 
-.game-over.down {  
+.game-over.down {
 top: 200px;  
 }
 
@@ -129,7 +128,7 @@ background-color: #444444;
   cursor: pointer;
 }
 
-.input-button:hover {  
+.input-button:hover {
   color:#e6e6e6;
   cursor: pointer;
 }
@@ -203,9 +202,6 @@ transition: transform 0.2s;
 transform: rotateY(180deg);
 }
 
-
-
-
 .front-face,
 .back-face {
 width: 100%;
@@ -214,6 +210,7 @@ padding: 20px;
 position: absolute;
 border-radius: 5px;
 background: #1C7CCC;
+-webkit-backface-visibility: hidden;
 backface-visibility: hidden;
 }
 
@@ -251,7 +248,6 @@ padding-left: 30px;
   display: inline-block;
   width: 100px;
   text-align: left;
-
 }
 
 .time-past,
@@ -271,7 +267,7 @@ color:#b0b0b0;
 background-color: #616161;
 }
 
-.reset-btn:hover {  
+.reset-btn:hover {
   color:#e6e6e6;
   cursor: pointer;
 }
@@ -283,9 +279,9 @@ background-color: #616161;
 }
 
 .footer {
-display: flex;    
+display: flex;
 justify-content: space-between;
-align-items: center;    
+align-items: center;
 height: 100px;
 color: #000000;
 background-color: #b0b0b0;
@@ -294,14 +290,14 @@ background-color: #b0b0b0;
 .github {
 text-decoration: none;
 color: inherit;
-}  
+}
  
 .footer-copyright {
 display: flex;
 justify-content: flex-start;
 align-items: center;
 gap: 30px;
-padding-left: 3%;    
+padding-left: 3%;
 }
 
 .footer-link {
@@ -309,7 +305,7 @@ display: flex;
 justify-content: space-between;
 align-items: center;
 gap: 30px;
-padding-right: 3%;    
+padding-right: 3%;
 }
 
 .footer-link a {
@@ -324,5 +320,5 @@ transition: 0.5s;
 
 .rss {
 width: 121px;
-height: 45px;    
+height: 45px;
 }
